[project]
name = "my-lib"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = ["requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
src = "my_lib"

[tool.ruff]
line-length = 200
