[package]
name = "system-info"
version = "0.0.1"
description = "系统信息"
authors = ["icefery"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
